# warmhouse

./: README.md
.github/workflows/: plantuml.yml
apps/: docker-compose-v2.yml  docker-compose.yml
apps/devices_management/: Dockerfile  api.py  http_client.py  pyproject.toml  rabbitmq.py
apps/telemetry_api/: Dockerfile  api.py  event_handler.py  init.sql  pyproject.toml
apps/temperature_api/: Dockerfile  api.py  pyproject.toml
schemas/diagrams/code/: smarthouse_devices_component.puml
schemas/diagrams/components/: smarthouse_devices_management.puml  smarthouse_devices_management_components.puml  smarthouse_house_management.puml  smarthouse_house_management_components.puml  smarthouse_monitoring.puml  smarthouse_monitoring_components.puml  smarthouse_user.puml  smarthouse_user_components.puml
schemas/diagrams/containers/: smarthouse.puml  smarthouse_containers.puml
schemas/diagrams/context/: smarthouse.puml  smarthouse_as_is.puml  smarthouse_context.puml
schemas/diagrams/er/: smarthouse.puml
schemas/docs/: device_management_api.yaml  house_management_api.yaml  monitoring_api.yaml  smarthome_asyncapi.yaml  user_app_api.yaml
scripts/: install-plantuml.sh
