[project]
name = "devices-management"
version = "0.1.0"
description = "Device management service for Smart House system"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "sqlalchemy>=2.0.0",
    "psycopg>=3.3.2",
    "psycopg2-binary>=2.9.11",
    "aio-pika>=9.0.0",
]

[dependency-groups]
dev = [
    "sqlalchemy-stubs>=0.4",
    "uv>=0.4.24",
]

[[tool.mypy.overrides]]
module = "aio-pika.*"
ignore_missing_imports = true
