[project]
name = "telemetry-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "aio-pika>=9.0.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "asyncpg-stubs>=0.31.1",
]

[[tool.mypy.overrides]]
module = "aio-pika.*"
ignore_missing_imports = true


